2.26.10 (11-02-2026)
- Improvement: Check access control by degree on SAS [#qubIT-Fenix-3081]
- Improvement: Allow to map ministry degree codes on SAS integration [#UL-REIT-4612]

2.26.9 (13-01-2026)
- Bug fix: RAIDES: validate that students are enrolled in at least 1 ECTS [#UCP-FENIXEDU-613]

2.26.8 (18-12-2025)
- Refactor: Update XSD to RAIDES24 (phase 1) [#UL-REIT-4706]

2.26.7 (16-12-2025)
- Refactor: Remove competence course information hardcoded field references and replace with dynamic field access [#qubIT-Fenix-6448]

2.26.6 (15-12-2025)
- Bug fix: Ensure read of CompetenceCourseType inside transaction [#qubIT-Fenix-3048]

2.26.5 (12-12-2025)
- Refactor: Replaces CompetenceCourseType enum references [#qubIT-Fenix-3048]

2.26.4 (22-10-2025)
- Improvement: RAIDES - List the competence courses without credits at log file [#qubIT-Fenix-7656]

2.26.3 (16-10-2025)
- Bug fix: An error occurs when generating the RAIDES report if the student's country of residence is not filled in. [#qubIT-Fenix-7639]
- Bug fix: Empty lines at XLS RAIDES report (Sheet: Personal Ingression Data) [#UCP-FENIXEDU-519]

2.26.2 (24-09-2025)
- Refactor: Remove deprecated degreeInfo and extendedDegreeInfo fields and replace them with dynamic fields [#qubIT-Fenix-6512]

2.26.1 (28-08-2025)
- Refactor: Use static RAIDES code constants [#qubIT-Fenix-7009]

2.26.0 (08-08-2025)
- Refactor: Cleans up RAIDES enums refactor [#qubIT-Fenix-7009]

2.25.1 (04-08-2025)
- Refactor: removes references of StudentCandidacy [#qubIT-Fenix-6559]

2.25.0 (29-07-2025)
- Refactor: Creates RAIDES domain object legal mappings and replaces references [#qubIT-Fenix-7009]
- Refactor: Replaces SchoolLevelTypeMappings with EducationLevelTypeMappings [#qubIT-Fenix-7009]

2.24.19 (23-07-2025)
- Refactor: Refactors SchoolLevelType, ProfessionalSituationConditionType and ProfessionType enums [#qubIT-Fenix-7009]

2.24.18 (09-07-2025)
- Refactor: Moves Placing Option from StudentCandidacy to Registration [#qubIT-Fenix-6559]
